[gd_scene load_steps=6 format=2]

[ext_resource path="res://Grids/grid_solution.gd" type="Script" id=1]
[ext_resource path="res://Grids/Control-script.gd" type="Script" id=2]
[ext_resource path="res://Misc/HBoxContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/deletion-zone.png" type="Texture" id=4]
[ext_resource path="res://Grids/grid_task.gd" type="Script" id=6]

[node name="Control" type="Control" groups=["controlGroup"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="grid_solution" type="GridContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.2
anchor_right = 0.6
anchor_bottom = 0.2
mouse_filter = 0
columns = 3
script = ExtResource( 1 )

[node name="HBoxContainer" parent="." instance=ExtResource( 3 )]
anchor_left = 0.25
anchor_right = 0.25
anchor_bottom = 0.7

[node name="DeletionZone" type="NinePatchRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -219.0
margin_right = -39.0
margin_bottom = 219.0
texture = ExtResource( 4 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.937

[node name="grid_task" type="GridContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.25
anchor_right = 0.2
anchor_bottom = 0.25
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.7, 0.7 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
script = ExtResource( 6 )

[connection signal="mouse_entered" from="." to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Control_mouse_exited"]
